[Fix] the `FileTree`'s scrollbar cannot be covered by the `Workspace`

--- a/src/base/browser/basic/scrollbar/scrollbar.scss
+++ b/src/base/browser/basic/scrollbar/scrollbar.scss
@@ -1,6 +1,5 @@
 
 .scroll-bar {
-    z-index: 101;
     position: absolute;
 
     &.visible {
