--- a/src/base/browser/secondary/listView/listView.scss
+++ b/src/base/browser/secondary/listView/listView.scss
@@ -7,6 +7,9 @@
 	white-space: nowrap;
 	outline: 0;
 
+	display: flex;
+	flex-direction: row;
+
 	.list-view-container {
 		position: relative;
 		width: 100%;
